--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,7 @@ img {
   background:
   
     rgba(0, 0, 0, 0)
-    url("/images/background-images/hero-background.png") no-repeat scroll center
-    top;
+    url("/images/background-images/hero-background.png") no-repeat scroll center top;
   height: auto;
   width: 100%;
   padding-bottom: 50px;
@@ -191,8 +190,7 @@ img {
 .main-program {
   background:
   
-    rgba(0, 0, 0, 0) url("/images/background-images/main-program.jpg")
-    no-repeat scroll center top;
+    rgba(0, 0, 0, 0) url("/images/background-images/main-program.jpg") no-repeat scroll center top;
   height: 769px;
   width: 95%;
   overflow: auto;
@@ -210,16 +208,6 @@ img {
   background-image: none;
   height: auto;
 }
-
-/*
-.program-outline-topic {
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  margin: 0;
-  text-align: center;
-  color: rgb(255, 255, 255);
-} */
 
 .section-title {
   font-size: 24px;
